  * Allow DEBIAN_VERSION to be overriden using environment variable.

  [ Frans Pop ]
  * Disable builds for PowerPC PReP images as there are no prep kernels
    available.

  [ Joey Hess ]
  * Switch i386 to 2.6.22-3.

  [ Martin Michlmayr ]
  * Switch all other architectures to 2.6.22-3.
  * Use mklibs-copy rather than mklibs on mips and mipsel for now since
    the latter doesn't work.

 -- Joey Hess <joeyh@debian.org>  Sat, 17 Nov 2007 15:44:08 -0500

debian-installer (20070308) unstable; urgency=low

  [ Thiemo Seufer ]
  * Add Qemu mips/mipsel images, thanks Aurelien Jarno.

  [ Sylvain Ferriol ]
  * Add keyboard usb packages in i386 root floppy and move all net packages
    to i386 net-drivers-1 floppy.

  [ Frans Pop ]
  * Switch font used for Dzongkha in g-i to ttf-tmuni.

  [ Martin Michlmayr ]
  * Provide a properly encrypted firmware image for Thecus N2100 so the
    firmware upgrade process will recognize it.  Thanks to Kurt Roeckx
    for help with OpenSSL.
  * Remove incomplete armeb support.
  * Remove obsolete arm/nslu2 config files.
  * Switch arm, mips and mipsel to 2.6.18-2.
  * Switch arm, mips and mipsel to 2.6.18-3.
  * n2100: Add support for Evesham's M-Box.
  * Put in a workaround to support building with both apex 1.4.7 and the
    new 1.4.14 which changes the name of the apex binary; closes: #409747

  [ Joey Hess ]
  * Stop using the system status file; generate a dummy status file for apt
    containing libc6 and libnewt (the only two debs udebs still depend on).
  * dhcp3-client-udeb is for some reason Standard priority, so gets included
    in monolithic image builds (and breaks the build). Exclude it from the
    monolithic images until its priority is fixed.
  * The i386 boot floppy will be too big with the 2.6.18 kernel, so drop
    usb input modules from it. USB keyboard support didn't work before
    anyway AFAICS, since usb-discover was not included.
  * With 2.6.18, nic-extra-modules gets too big to fit on the i386