@@ -21,6 +21,7 @@ clean:
 	dh_clean build-stamp
 	$(MAKE) -C build reallyclean
 	$(MAKE) -C doc/devel/partman clean
+	$(MAKE) -C doc/devel/internals clean
 
 # Must run as root, so is not run as part of regular build.
 build-images:
@@ -30,6 +31,7 @@ build-images:
 build: build-stamp
 build-stamp:
 	rm -f $@
+	$(MAKE) -C doc/devel/internals
 	$(MAKE) -C doc/devel/partman
 	touch $@
 
@@ -49,7 +51,8 @@ binary-arch: install
 	dh_testdir
 	dh_testroot
 	dh_installchangelogs
-	dh_installdocs doc/* -X Makefile -X partman-doc.sgml
+	dh_installdocs doc/* -X Makefile -X build.sh -X .xsl \
+		-X internals.xml -X partman-doc.sgml
 	dh_compress
 	dh_fixperms
 	dh_gencontrol
