@@ -163,6 +163,10 @@ debian-installer (2007xxxx) UNRELEASED; urgency=low
   * Use mklibs-copy rather than mklibs on mips and mipsel for now since
     the latter doesn't work.
 
+  [ Colin Watson ]
+  * Move Frans' d-i internals manual from doc/talks/d-i_debconf6/ to
+    doc/devel/internals/, and build it by default.
+
  -- Joey Hess <joeyh@debian.org>  Sat, 17 Nov 2007 15:44:08 -0500
 
 debian-installer (20070308) unstable; urgency=low
